# solace

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
solace-client-term/: Cargo.toml
solace-client-term/src/: chat_window.rs  config.rs  logger.rs  main.rs  prompt.rs
solace-message-parser/: Cargo.toml
solace-message-parser/src/: lexer.rs  lib.rs  parser.rs
solace-protocol/: Cargo.toml
solace-protocol/src/: code.rs  request.rs  response.rs
solace-server/: Cargo.toml
solace-server/src/: main.rs
src/: main.rs
wangerz-client-term/: Cargo.toml
wangerz-client-term/src/: chat_client.rs  chat_window.rs  color.rs  command.rs  config.rs  logger.rs  main.rs  prompt.rs
wangerz-message-parser/: Cargo.toml
wangerz-message-parser/src/: lexer.rs  lib.rs  parser.rs
wangerz-protocol/: Cargo.toml
wangerz-protocol/src/: code.rs  lib.rs  request.rs  response.rs
wangerz-server/: Cargo.toml
wangerz-server/src/: command.rs  main.rs
