[package]
name = "solace-client-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solace-message-parser = { path = "../solace-message-parser" }
solace-protocol = { path = "../solace-protocol" }

anyhow = "1.0.83"
chrono = "0.4.38"
crossterm = "0.27.0"
once_cell = "1.19.0"
rand = "0.8.5"
toml = "0.8.13"
serde = { version = "1.0.202", features = ["derive"] }
xdg = "2.5.2"
