[package]
name = "solace-client-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solace-message-parser = { path = "../solace-message-parser" }
solace-protocol = { path = "../solace-protocol" }

anyhow = "1.0.83"
chrono = "0.4.38"
crossterm = { version = "0.27.0", features = ["event-stream"] }
once_cell = "1.19.0"
rand = "0.8.5"
toml = "0.8.13"
serde = { version = "1.0.202", features = ["derive"] }
xdg = "2.5.2"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
