[package]
name = "wangerz-client-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wangerz-message-parser = { path = "../wangerz-message-parser" }
wangerz-protocol = { path = "../wangerz-protocol" }

anyhow = "1.0.83"
chrono = "0.4.38"
crossterm = "0.27.0"
once_cell = "1.19.0"
toml = "0.8.13"
serde = { version = "1.0.202", features = ["derive"] }
xdg = "2.5.2"
