[package]
name = "wangerz-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bincode = "1.3.3"
chrono = "0.4.38"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
