[package]
name = "wangerz-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wangerz-message-parser = { path = "../wangerz-message-parser" }
wangerz-protocol = { path = "../wangerz-protocol" }

anyhow = "1.0.83"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["full"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
